# vibe2ship

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dvibe2ship.env.example  PIVOT_PLAN.md  README.md  SUBMISSION_REQUIREMENTS.md  database.py  docker-compose.yml  main.py  manifest.json  package.json  pyproject.toml  rag.py  requirements.txt  submission_description.md  sw.js  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml
routes/: __init__.py  ai.py  analytics.py  auth.py  demo.py  focus.py  goals.py  notifications.py  pages.py  rag.py  rescue.py  simulation.py  status.py  summary.py  threats.py  timeline.py  twin.py
shared/: ai-calendar.js  auth.js  demo-mode.js  demo.js  focus-timer.js  fs-shared.js  knowledge-graph.js  sensor-fusion.js  style.css  ui.js  voice-assistant.js
templates/: analytics.html  base.html  dashboard.html  index.html  radar.html  rag.html  rescue.html  simulation.html  timeline.html  twin.html
tests/: conftest.py  test_api.py  test_database.py  test_e2e.py  test_rag.py
